Stop nav flickering in Safari.

--- a/css/brackets.io.css
+++ b/css/brackets.io.css
@@ -220,6 +220,7 @@ blockquote p {
     transition: opacity 300ms ease-out;
     vertical-align: middle;
     width: 22px;
+    -webkit-backface-visibility: hidden; /* To prevent flicker. Could be a safari bug */
 }
 
 .social-links-item:hover {
